[package]
name = "mako_bundler"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/umijs/mako"
license = "MIT"

[dependencies]
tokio = { workspace = true, features = ["full"] }
swc_ecma_ast = { version = "0.96.5", features = ["rkyv-impl"] }
swc_ecma_parser = { version = "0.124.9" }
swc_common = { version = "0.29.31", features = ["concurrent"] }
swc_ecma_visit = { version = "0.82.5" }
swc_ecma_codegen = { version = "0.129.12" }
swc_ecma_transforms = { version = "0.203.20", features = [
  "module",
  "typescript",
  "react",
  "concurrent",
] }
relative-path = "1.8.0"
regex = "1"
lazy_static = "1.4.0"
base64 = "0.21.0"
rustc-serialize = "0.3.24"
