[package]
name = "mako_bundler"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/umijs/mako"
license = "MIT"

[dependencies]
maplit = "1.0.2"
tokio = { workspace = true, features = ["full"] }
swc_ecma_ast = { version = "0.96.5", features = ["rkyv-impl"] }
swc_ecma_parser = { version = "0.124.9" }
swc_common = { version = "0.29.31", features = ["concurrent"] }
swc_ecma_visit = { version = "0.82.5" }
swc_ecma_codegen = { version = "0.129.12" }
swc_ecma_transforms = { version = "0.203.20", features = [
  "module",
  "typescript",
  "react",
  "concurrent",
] }
swc_ecma_utils = { version = "0.107.12" }
swc_atoms = { version = "0.4.41" }
relative-path = "1.8.0"
regex = "1"
lazy_static = "1.4.0"
base64 = "0.21.0"
petgraph = "0.6.3"
md5 = "0.7.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
config = "0.13.3"
nodejs-resolver = "0.0.78"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml"] }
