[package]
name = "mako_bundler"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/umijs/mako"
license = "MIT"

[dependencies]
maplit = "1.0.2"
tokio = { workspace = true, features = ["full"] }
swc_ecma_ast = { version = "0.102.5", features = ["rkyv-impl"] }
swc_ecma_parser = { version = "0.132.6" }
swc_common = { version = "0.30.5", features = ["concurrent"] }
swc_ecma_visit = { version = "0.88.5" }
swc_ecma_codegen = { version = "0.137.6" }
swc_ecma_transforms = { version = "0.216.4", features = [
  "module",
  "typescript",
  "react",
  "concurrent",
] }
swc_ecma_utils = { version = "0.115.8" }
swc_atoms = { version = "0.4.43" }
relative-path = "1.8.0"
regex = "1"
lazy_static = "1.4.0"
base64 = "0.21.0"
petgraph = "0.6.3"
md5 = "0.7.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
config = "0.13.3"
nodejs-resolver = "0.0.78"
lightningcss = "1.0.0-alpha.41"
swc_css_ast = "0.136.6"
swc_css_codegen = "0.146.6"
swc_css_parser = "0.145.6"
swc_css_visit = "0.135.6"
rayon = "1.7.0"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml"] }
