[package]
name = "mako_cli"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/umijs/mako"
license = "MIT"

[[bin]]
name = "mako"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mako_bundler = { path = "../mako_bundler" }
clap = { version = "4.2.7", features = ["derive"] }
maplit = { workspace = true }
