[package]
edition = "2021"
name = "alipay_okam"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.14.0", default-features = false, features = [
  "napi4",
  "napi5",
  "serde-json",
  "tokio_rt",
] }
napi-derive = "2.14.0"
mako = { path = '../mako' }
mako_core = { path = "../core" }
serde_json = { workspace = true }
cached = { workspace = true }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
