[package]
name = "pack-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
pack-core = { workspace = true }
qstring = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
futures = { workspace = true }
urlencoding = { workspace = true }
parking_lot = { workspace = true }
turbo-rcstr = { workspace = true }
turbo-tasks = { workspace = true }
turbo-tasks-env = { workspace = true }
turbo-tasks-fs = { workspace = true }
turbo-tasks-backend = { workspace = true }
turbopack = { workspace = true }
turbopack-browser = { workspace = true }
turbopack-core = { workspace = true }
turbopack-node = { workspace = true }
turbopack-nodejs = { workspace = true }
turbopack-trace-utils = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
turbo-tasks-build = { workspace = true }

vergen = { version = "9.0.6", features = ["cargo"] }


[lints]
workspace = true
