[package]
name = "pack-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "pack-cli"
path = "src/main.rs"


[dependencies]
pack-api = { workspace = true }
pack-core = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true }
dunce = { workspace = true }
serde_json = { workspace = true }
turbo-rcstr = { workspace = true }
turbo-tasks = { workspace = true }
turbo-tasks-backend = { workspace = true }
turbo-tasks-malloc = { workspace = true }
turbopack-trace-utils = { workspace = true }


[build-dependencies]
turbo-tasks-build = { workspace = true }

[lints]
workspace = true
