[package]
name = "pack-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
plugin = [
  "swc_core/plugin_transform_host_native",
  "turbopack-ecmascript-plugins/swc_ecma_transform_plugin",
]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22.1"
qstring = "0.7.2"
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mime_guess = "2.0.4"
indoc = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
rustc-hash = { workspace = true }
remove_console = "0.34.0"
urlencoding = { workspace = true }
modularize_imports = { version = "0.79.0" }
swc_core = { workspace = true, features = [
  "base",
  "cached",
  "common_concurrent",
  "ecma_ast",
  "ecma_loader_lru",
  "ecma_loader_node",
  "ecma_minifier",
  "ecma_parser",
  "ecma_parser_typescript",
  "ecma_preset_env",
  "ecma_transforms",
  "ecma_transforms_optimization",
  "ecma_transforms_react",
  "ecma_transforms_typescript",
  "ecma_utils",
  "ecma_visit",
] }

turbo-rcstr = { workspace = true }
turbo-tasks = { workspace = true }
turbo-tasks-bytes = { workspace = true }
turbo-tasks-env = { workspace = true }
turbo-tasks-fetch = { workspace = true }
turbo-tasks-fs = { workspace = true }
turbo-tasks-hash = { workspace = true }
turbopack = { workspace = true }
turbopack-browser = { workspace = true }
turbopack-core = { workspace = true }
turbopack-ecmascript = { workspace = true }
turbopack-ecmascript-plugins = { workspace = true, features = [
  "transform_emotion",
] }
turbopack-ecmascript-runtime = { workspace = true }
turbopack-node = { workspace = true }
turbopack-static = { workspace = true }
turbopack-image = { workspace = true }
turbopack-resolve = { workspace = true }
turbopack-trace-utils = { workspace = true }

[build-dependencies]
turbo-tasks-build = { workspace = true }

[lints]
workspace = true
