[package]
name = "utoo_runtime"
version = "0.0.1"
edition = "2021"

[lib]
name = "utoo_runtime"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
deno_runtime = { version = "=0.212.0", features = ["transpile"] }
deno_ast = { version = "=0.46.6", features = [
  "concurrent",
] }
deno_error = "=0.5.6"
deno_graph = "=0.90.0"
deno_lib = "=2.3.1"
deno_features = "=0.1.0"
deno_semver = "=0.7.1"
node_resolver = "=0.42.0"
deno_core = "=0.344.0"
deno_telemetry = "=0.26.0"
deno_resolver = { version = "=0.35.0", features = ["sync"] }
deno_path_util = "=0.3.2"
sys_traits = "0.1.8"
log = { version = "0.4.27", features = ["kv", "serde"] }
thiserror = "2.0.12"

#[patch.crates-io]
#deno_ast = { git = "https://github.com/cnpm/deno_ast.git", rev = "24dd9b6eb826b4a0985b4a271e56b42d9d345e64" }
