[package]
authors     = ["SyMind <dacongsama@live.com>"]
description = "A tool to transform SVG into React components"
name        = "svgr-rs"
edition     = "2021"
license     = "MIT"
repository  = "https://github.com/svg-rust/svgr-rs.git"
version     = "0.1.3"

[features]
node = ["dep:napi", "dep:napi-derive"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi        = { version = "2.12.0", default-features = false, features = ["async", "napi4"], optional = true }
napi-derive = { version = "2.12.2", optional = true }

clap = { version = "4.2.0", features = ["derive"] }
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
linked_hash_set = "0.1.4"
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
swc_core = { workspace = true, features = [
  "bundler",
  "common_concurrent",
  "ecma_ast",
  "ecma_ast_serde",
  "ecma_codegen",
  "ecma_loader",
  "ecma_parser",
  "ecma_transforms",
  "ecma_visit",
] }
swc_xml = "0.17.0"
thiserror = "1.0.56"

testing = { version = "0.38.1" }

[profile.release]
lto = true
